--- a/experience.html
+++ b/experience.html
@@ -50,6 +50,9 @@
                 </ul>
                 </div>
                 <!--Unordered list end-->
+                <div class="resume">
+                    <a href="PDF/Resume-Luke-Gass.pdf">View My Full Resume</a>
+                </div>
 
                 <!--Table-->
                 <table class = "table">
