--- a/experience.html
+++ b/experience.html
@@ -89,6 +89,11 @@
                     <li>Fitness/Nutrition</li>
                 </ul>
                 </div>
+
+                <h2>Projects:</h2>
+                    <ul>
+                        <li>JavaScript Calculator</li>
+                    </ul>
             </section>
 
 
