--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
                                 
                                 <div class="formHeader">
                                     <h2>Contact Form</h2>
+                                    <noscript><u>*JavaScript is disabled. Please enable to properly validate this form.*</u></noscript>
                                 </div>
                                 <div class="formBody">
                                     <div id="textGroup">
