--- a/gallery.html
+++ b/gallery.html
@@ -42,6 +42,7 @@
                         <!--Article elements are here to demonstrate semantic HTML and will have content 
                             added on some pages when appropriate-->
                         <!--Image collection-->
+                    <!-- <noscript> -->
                         <article class = "album">
                             <h2>Alcatraz</h2>
                             <div class = "gallery">
@@ -53,6 +54,7 @@
                             <!--Image collection end-->
 
                         </article>
+                    <!-- </noscript> -->
                 </section>
             </main>
             
