--- a/experience.html
+++ b/experience.html
@@ -92,7 +92,7 @@
 
                 <h2>Projects:</h2>
                     <ul>
-                        <li><a href="Calculator/calculator.html">JavaScript Calculator</a></li>
+                        <li><a href="Calculator/calculator.html">JavaScript Calculator</a> (*requires JS)</li>
                     </ul>
             </section>
 
