--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <!--Article elements are here to demonstrate semantic HTML and will have content 
                     added on some pages when appropriate-->
                 <article>
-                   
+                    <noscript><p><u>*JavaScript is disabled. Please enable to access the contact form.*</u></p></noscript>
                             <form   name = "myForm" 
                                     id = "myForm"
                                     action = "https://cs601.bu-course-examples.com/hw4/380a98f5-5191-496f-8aa1-7acc1da83cc5"
@@ -61,7 +61,6 @@
                                 
                                 <div class="formHeader">
                                     <h2>Contact Form</h2>
-                                    <noscript><u>*JavaScript is disabled. Please enable to properly validate this form.*</u></noscript>
                                 </div>
                                 <div class="formBody">
                                     <div id="textGroup">
