--- a/experience.html
+++ b/experience.html
@@ -93,6 +93,7 @@
                 <h2>Projects:</h2>
                     <ul>
                         <li><a href="Calculator/calculator.html">JavaScript Calculator</a> (*requires JS)</li>
+                        <li><a href="https://cs601-assignment-5.glitch.me/">JavaScript Fetch</a>(*requries JS)</li>
                     </ul>
             </section>
 
