--- a/gallery.html
+++ b/gallery.html
@@ -42,10 +42,11 @@
                         <!--Article elements are here to demonstrate semantic HTML and will have content 
                             added on some pages when appropriate-->
 
-                    <article class="album">
+                    
                         <div id="photo-viewer">
                             <img id="openImage" src = "Images/Alcatraz_1.jpg" alt = "Alcatraz Island shown from a distance with a boat in the foreground.">
                         </div>
+                     <article class="album">
                         <div id="thumbnails">
                             <p>Alcatraz:</p>
                             <a href="Images/Alcatraz_1.jpg" class="thumb" title="Alcatraz 1">
@@ -83,17 +84,6 @@
                 of the page above.-->
             <footer>Copyright &copy; 2022 Luke Gass. All Rights Reserved.</footer>
         </div>
-        <script>
-            const img = document.getElementsByClassName('thumb');
-            for(i=0;i<img.length;i++){
-            img[i].addEventListener('click', function(e){
-                    e.preventDefault();
-                })
-        }
-
-            function imgEnlarge(imgs) {
-            let selectedImg = document.getElementById("openImage");
-            selectedImg.src = imgs.src;
-          } </script>
+        <script src="JS/photo-viewer.js"></script>
     </body>
 </html>
