--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
     <title>
-        Luke Gass - Home
+        Luke Gass Website - Home
     </title>
     <link href = "CSS/style.css" rel = "stylesheet">
 </head>
