--- a/VueExample/vueExample.html
+++ b/VueExample/vueExample.html
@@ -8,7 +8,7 @@
 
     
     <div id="app">
-        <img :src = 'logoSrc' alt = 'Boston University Logo'/>
+        <img :src="logoSrc" alt = "Boston University Logo"/>
          <h1>{{ appName }}</h1> 
          <a v-bind:href="link">View Course Details</a>
 
