--- a/experience.html
+++ b/experience.html
@@ -18,7 +18,6 @@
                 <span>Experience</span> |
                 <a href = "contact.html">Contact</a> |
                 <a href = "blog.html">Blog</a> |
-        
                 <a href = "gallery.html">Gallery</a>
             </nav>
             <h1>Experience</h1>
@@ -51,7 +50,7 @@
                 </div>
                 <!--Unordered list end-->
                 <div class="resume">
-                    <a href="PDF/Resume-Luke-Gass.pdf">View My Full Resume</a>
+                    <a href="PDF/Resume-Luke-Gass.pdf"><b>View My Full Resume</b></a>
                 </div>
 
                 <!--Table-->
