--- a/blog.html
+++ b/blog.html
@@ -59,33 +59,39 @@
                                 <li><span id = "green">Green</span></li>
                                 <li><span id = "orange">Orange</span></li>
                             </ol>
+                            <footer>date</footer>
                         </article>
 
                         <article class = "blogpost">
                             <header>
                                 <h3>Blog Post 2</h3>
                             </header>
+                            <footer>date</footer>
                         </article>
 
                         <article class = "blogpost">
                             <header>
                                 <h3>Blog Post 3</h3>
                             </header>
+                            <footer>date</footer>
                         </article>
                         <article class = "blogpost">
                             <header>
                                 <h3>Blog Post 4</h3>
                             </header>
+                            <footer>date</footer>
                         </article>
                         <article class = "blogpost">
                             <header>
                                 <h3>Blog Post 5</h3>
                             </header>
+                            <footer>date</footer>
                         </article>
                         <article class = "blogpost">
                             <header>
                                 <h3>Blog Post 6</h3>
                             </header>
+                            <footer>date</footer>
                         </article>
                         
                     </div>
