--- a/VueExample/vueExample.html
+++ b/VueExample/vueExample.html
@@ -7,6 +7,8 @@
 <body> 
 
     <h1 >Artist Spotlight: Vincent van Gogh</h1>
+
+    <noscript><h1>*JavaScript is disabled on your browser. Please activete to use this app.*</h1></noscript>
     <!--App start-->
     <div id="app">
         <h2
