--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,7 @@
         Luke Gass - Experience
     </title>
     <link href = "CSS/style.css" rel = "stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
     <body>
@@ -12,6 +13,18 @@
         <!--I included the nav bar as an element in the header so that it will appear 
             at the top of every page-->
         <header> 
+            <nav class="topNav" id="navbar">
+                <a class="nav" href="index.html">Home</a> <span class="nav">|</span>
+                <a class="nav" href="about.html">About</a> <span class="nav">|</span>
+                <span class="nav selected">Experience</span> <span class="nav">|</span>
+                <a class="nav" href="contact.html">Contact</a> <span class="nav">|</span>
+                <a class="nav" href="blog.html">Blog</a> <span class="nav">|</span>
+                <a class ="nav" href = "gallery.html">Gallery</a>
+                <a href="javascript:void(0);" id="icon" class="nav" onclick="collapse()">
+                    <i class="fa fa-bars"></i>
+                  </a>
+            </nav>
+            <noscript>
             <nav>
                 <a href = "index.html"> Home</a> |
                 <a href = "about.html">About</a> |
@@ -20,6 +33,7 @@
                 <a href = "blog.html">Blog</a> |
                 <a href = "gallery.html">Gallery</a>
             </nav>
+            </noscript>
             <h1>Experience</h1>
 
             <figure>
@@ -108,6 +122,7 @@
         <!--I added a break element before the footer to give it some padding from the rest 
             of the page above.-->
         <footer>Copyright &copy; 2022 Luke Gass. All Rights Reserved.</footer>
+        <script src="JS/navbar.js"></script>
         </div>
     </body>
 </html>
