--- a/about.html
+++ b/about.html
@@ -5,12 +5,25 @@
         Luke Gass - About
     </title>
     <link href = "CSS/style.css" rel = "stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
     <body>
         <div class = "content">
             <!--I included the nav bar as an element in the header so that it will appear 
                 at the top of every page-->
             <header> 
+                <nav class="topNav" id="navbar">
+                    <a class="nav" href="index.html">Home</a> <span class="nav">|</span>
+                    <span class="nav selected">About</span> <span class="nav">|</span>
+                    <a class ="nav" href = "experience.html">Experience</a> <span class="nav">|</span>
+                    <a class ="nav" href = "contact.html">Contact</a> <span class="nav">|</span>
+                    <a class ="nav" href = "blog.html">Blog</a> <span class="nav">|</span>
+                    <a class ="nav" href = "gallery.html">Gallery</a>
+                    <a href="javascript:void(0);" id="icon" class="nav" onclick="collapse()">
+                        <i class="fa fa-bars"></i>
+                      </a>
+                </nav>
+                <noscript>
                 <nav>
                     <a href = "index.html">Home</a> |
                     <span>About</span> |
@@ -19,6 +32,7 @@
                     <a href = "blog.html">Blog</a> |
                     <a href = "gallery.html">Gallery</a>
                 </nav>
+                </noscript>
                 <h1>About Me</h1>
 
                 <img id = "headshot" class = "main" src = "Images/Headshot.jpg" alt = "Headshot">
@@ -80,6 +94,7 @@
                 of the page above.-->
             <footer>Copyright &copy; 2022 Luke Gass. All Rights Reserved.</footer>
         </div>
+        <script src="JS/navbar.js"></script>
     </body>
 
 </html>
