--- a/gallery.html
+++ b/gallery.html
@@ -5,12 +5,25 @@
         Luke Gass - Gallery
     </title>
     <link href = "CSS/style.css" rel = "stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
     <body>
         <div class = "content">
             <!--I included the nav bar as an element in the header so that it will appear 
                 at the top of every page-->
             <header> 
+                <nav class="topNav" id="navbar">
+                    <a class="nav" href="index.html">Home</a> <span class="nav">|</span>
+                    <a class="nav" href="about.html">About</a> <span class="nav">|</span>
+                    <a class="nav" href="experience.html">Experience</a> <span class="nav">|</span>
+                    <a class="nav" href="contact.html">Contact</a> <span class="nav">|</span>
+                    <a class="nav" href="blog.html">Blog</a> <span class="nav">|</span>
+                    <span class="nav selected">Gallery</span>
+                    <a href="javascript:void(0);" id="icon" class="nav" onclick="collapse()">
+                        <i class="fa fa-bars"></i>
+                      </a>
+                </nav>
+                <noscript>
                 <nav>
                     <a href = "index.html">Home</a> |
                     <a href = "about.html">About</a> |
@@ -19,6 +32,7 @@
                     <a href = "blog.html">Blog</a> |
                     <span>Gallery</span>
                 </nav>
+                </noscript>
                 <h1>Photo Gallery</h1>
 
                 <!--Using a figure element allowed me to include a figcaption element without triggering an error.-->
@@ -85,5 +99,6 @@
             <footer>Copyright &copy; 2022 Luke Gass. All Rights Reserved.</footer>
         </div>
         <script src="JS/photo-viewer.js"></script>
+        <script src="JS/navbar.js"></script>
     </body>
 </html>
