--- a/ArraySort/arraySort.html
+++ b/ArraySort/arraySort.html
@@ -2,10 +2,19 @@
 <html>
     <head>
         <title>Array Sort</title>
+        <link href = "arraySort.css" rel = "stylesheet">
     </head>
+    <div class="content">
     <body> 
-        <ul id="wordList"></ul>
+        <noscript><b>*Your browser has JavaScript disabled. Please enable to use this application.*</b></noscript>
+        <h3>Word List</h3>
+        <div class = "list">
+        <ul id="wordList">
 
+        </ul>
+        </div>
+        <button id="reset">Go Again!</button>
+    </div>
         <script src="arraySort.js"></script>
     </body>
 </html>
