--- a/experience.html
+++ b/experience.html
@@ -109,6 +109,7 @@
                         <li><a href="https://cs601-assignment-5.glitch.me/">JavaScript Fetch</a>(*requries JS)</li>
                         <li><a href="https://memory-game-12-8-2022.netlify.app/">Vue Memory Game</a>(*requies JS)</li>
                         <li><a href="VueExample/vueExample.html">Vue Example</a>(*requires JS)</li>
+                        <li><a href="ArraySort/arraySort.html">Array Sort</a>(*requires JS)</li>
                     </ul>
             </section>
 
