--- a/ArraySort/arraySort.html
+++ b/ArraySort/arraySort.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Array Sort</title>
         <link href = "arraySort.css" rel = "stylesheet">
     </head>
-    <div class="content">
-    <body> 
-        <noscript><b>*Your browser has JavaScript disabled. Please enable to use this application.*</b></noscript>
-        <h3>Word List</h3>
-        <div class = "list">
-        <ul id="wordList">
-
-        </ul>
+        <body> 
+        <div class="content">
+            <noscript><b>*Your browser has JavaScript disabled. Please enable to use this application.*</b></noscript>
+            <h3>Word List</h3>
+            <div class = "list">
+            <ul id="wordList">
+    
+            </ul>
+            </div>
+            <button id="reset">Go Again!</button>
         </div>
-        <button id="reset">Go Again!</button>
-    </div>
-        <script src="arraySort.js"></script>
-    </body>
+            <script src="arraySort.js"></script>
+        </body>
 </html>
