--- a/ArraySort/arraySort.html
+++ b/ArraySort/arraySort.html
@@ -6,13 +6,16 @@
     </head>
         <body> 
         <div class="content">
+            <h1>Array Sorting App</h1>
             <noscript><b>*Your browser has JavaScript disabled. Please enable to use this application.*</b></noscript>
-            <h3>Word List</h3>
+            <h2>Word List</h2>
             <div class = "list">
             <ul id="wordList">
     
             </ul>
             </div>
+            <h3>Word Count:</h3>
+            <p id="counter"></p>
             <button id="reset">Go Again!</button>
         </div>
             <script src="arraySort.js"></script>
