--- a/ArraySort/arraySort.html
+++ b/ArraySort/arraySort.html
@@ -7,6 +7,7 @@
         <body> 
         <div class="content">
             <h1>Array Sorting App</h1>
+            <!--no JS alert-->
             <noscript><b>*Your browser has JavaScript disabled. Please enable to use this application.*</b></noscript>
             <h2>Word List</h2>
             <div class = "list">
@@ -14,8 +15,10 @@
     
             </ul>
             </div>
+            <!--word counter-->
             <h3>Word Count:</h3>
             <p id="counter"></p>
+            <!--reset button-->
             <button id="reset">Go Again!</button>
         </div>
             <script src="arraySort.js"></script>
