--- a/about.html
+++ b/about.html
@@ -9,8 +9,7 @@
 </head>
     <body>
         <div class = "content">
-            <!--I included the nav bar as an element in the header so that it will appear 
-                at the top of every page-->
+            <!--Responsive Navbar with JS-->
             <header> 
                 <nav class="topNav" id="navbar">
                     <a class="nav" href="index.html">Home</a> <span class="nav">|</span>
@@ -24,6 +23,7 @@
                       </a>
                 </nav>
                 <noscript>
+                <!--Backup Navbar-->
                 <nav>
                     <a href = "index.html">Home</a> |
                     <span>About</span> |
