--- a/experience.html
+++ b/experience.html
@@ -10,8 +10,7 @@
 
     <body>
         <div class = "content">
-        <!--I included the nav bar as an element in the header so that it will appear 
-            at the top of every page-->
+        <!--Responsive Navbar with JS-->
         <header> 
             <nav class="topNav" id="navbar">
                 <a class="nav" href="index.html">Home</a> <span class="nav">|</span>
@@ -24,6 +23,7 @@
                     <i class="fa fa-bars"></i>
                   </a>
             </nav>
+        <!--Backup Navbar-->
             <noscript>
             <nav>
                 <a href = "index.html"> Home</a> |
@@ -107,7 +107,6 @@
                     <ul>
                         <li><a href="CalculatorProject/calculator.html">JavaScript Calculator</a> (*requires JS)</li>
                         <li><a href="https://cs601-assignment-5.glitch.me/">JavaScript Fetch</a>(*requries JS)</li>
-                        <li><a href="https://memory-game-12-8-2022.netlify.app/">Vue Memory Game</a>(*requies JS)</li>
                         <li><a href="VueExample/vueExample.html">Vue Example</a>(*requires JS)</li>
                         <li><a href="ArraySort/arraySort.html">Array Sort</a>(*requires JS)</li>
                     </ul>
