--- a/gallery.html
+++ b/gallery.html
@@ -9,8 +9,7 @@
 </head>
     <body>
         <div class = "content">
-            <!--I included the nav bar as an element in the header so that it will appear 
-                at the top of every page-->
+           <!--Responsive Navbar with JS-->
             <header> 
                 <nav class="topNav" id="navbar">
                     <a class="nav" href="index.html">Home</a> <span class="nav">|</span>
@@ -23,6 +22,7 @@
                         <i class="fa fa-bars"></i>
                       </a>
                 </nav>
+            <!--Backup Navbar-->
                 <noscript>
                 <nav>
                     <a href = "index.html">Home</a> |
